--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-draggable": "^4.4.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "unsplash-js": "^7.0.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
